# memento

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  append_one_node.pool  build.rs  build.sh  crash_recovery.sh  dockerfile  my_run.sh  plot.py  pmem_setup.md  run.sh  rust-toolchain  temp.md  test.sh
eval/queue/: Cargo.toml  README.md  plot.py  run.sh
eval/queue/src/: common.rs  main.cpp
eval/queue/src/compositional_pobj/: queue_general.rs  queue_lp.rs
eval/queue/src/crndm/: mod.rs  queue.rs
eval/queue/src/friedman/: durable_queue.rs  log_queue.rs  mod.rs
eval/queue/src/pmdk/: pipe.hpp  queue.hpp
evaluation/: .gitignore  Cargo.toml  README.md  build.sh  my_run.sh  plot.py  readme.md  run.sh
evaluation/HashEval/: .gitignore  README.md  build.sh  my_run.sh  plot.py  run.sh
evaluation/HashEval/hash/Clevel-rust/: Makefile  clevel_rust.cpp
evaluation/HashEval/hash/Clevel-rust/clevel_rust/: Cargo.toml
evaluation/HashEval/hash/Dash/: Makefile
evaluation/HashEval/hash/SOFT/: SOFT.h
evaluation/HashEval/hash/SOFT-rust/: Makefile  SOFT_rust.cpp
evaluation/HashEval/hash/common/: Makefile_common
evaluation/HashEval/pibench/src/: benchmark.cpp  main.cpp
evaluation/cas/: Cargo.toml  README.md  build.sh  plot.py  run.sh
evaluation/cas/src/: cas.rs  lib.rs  main.rs  mcas.rs  nrlcas.rs  pcas.rs
evaluation/correctness/: .gitignore  Makefile  README.md  build.sh  build_dram.sh  crash_recovery.sh  my_run.sh  repeat.sh  run.sh  run_dram.sh  tcrash_recovery.sh  tcrash_recovery_dram.sh  tgkill.c
evaluation/correctness/pmcheck/: README.md  build.sh  run.sh  test_mmt.cpp
evaluation/correctness/pmcheck/scripts/: build_exe.sh  build_memento.sh  build_pmcheck.sh  build_pmcpass.sh
evaluation/correctness/psan/: .gitignore  Cargo.toml  README.md  build.sh  build_memento.sh  psan.cpp  run.sh
evaluation/correctness/psan/scripts/: build_exe.sh  build_memento.sh  build_pmcheck.sh  build_pmcpass.sh  run.sh
evaluation/correctness/psan/src/: main.rs
evaluation/correctness/tcrash/: README.md  build.sh  run.sh
evaluation/hash/: README.md  build.sh  my_run.sh  plot.py  run.sh
evaluation/hash/hash/Clevel-rust/: Makefile  clevel_rust.cpp
evaluation/hash/hash/Clevel-rust/clevel_rust/: Cargo.toml
evaluation/hash/hash/SOFT/: SOFT.h  utilities.h
evaluation/hash/hash/SOFT-rust/: Makefile  SOFT_rust.cpp
evaluation/hash/hash/SOFT-rust/SOFT_rust/: Cargo.toml
evaluation/hash/pibench/src/: benchmark.cpp
evaluation/list/: README.md  build.sh  plot.py  run.sh
evaluation/list/src/: common.rs  main.rs
evaluation/list/src/mmt/: list.rs  mod.rs
evaluation/list/src/tracking/: .gitignore  RecoverableLinkedListTracking.h  Utilities.h  figures_compile.sh  figures_plot.py  figures_run.sh  main_linked_list.cpp
evaluation/list/tracking/: .gitignore  Makefile_Linked_List  README.md  figures_compile.sh  figures_run.sh  p_utils.h
evaluation/performance/cas/: Cargo.toml  README.md  plot.py  run.sh
evaluation/performance/cas/src/: pcas.rs
evaluation/performance/hash/: .gitignore  Makefile  README.md  build.sh  plot.py  run.sh
evaluation/performance/hash/hash/Clevel/: Makefile
evaluation/performance/hash/hash/Clevel-rust/: Makefile  clevel_rust.cpp
evaluation/performance/hash/hash/common/: hash_api.h
evaluation/performance/hash/pibench/src/: benchmark.cpp
evaluation/performance/list/: Cargo.toml  README.md  plot.py  run.sh
evaluation/performance/list/src/: lib.rs  main.rs
evaluation/performance/list/src/mmt/: list.rs
evaluation/performance/list/src/tracking/: RecoverableLinkedListCapsules.h  figures_compile.sh  figures_run.sh
evaluation/performance/queue/: .gitignore  Cargo.toml  README.md  build.sh  run.sh
evaluation/performance/queue/src/: common.rs  lib.rs  main.cpp  main.rs
evaluation/performance/queue/src/clobber-nvm/: build.sh  clobberclang  run_mnemosyne.sh  statelessclang_hrs  vlogclang_hrs
evaluation/performance/queue/src/compositional_pobj/: queue.rs  queue_comb.rs  queue_general.rs  queue_lp.rs
evaluation/performance/queue/src/crndm/: queue.rs
evaluation/performance/queue/src/dss/: queue.rs
evaluation/performance/queue/src/friedman/: durable_queue.rs  log_queue.rs
evaluation/performance/queue/src/pbcomb/: mod.rs  queue.rs
evaluation/queue/: Cargo.toml  README.md  build.sh  my_run.sh  plot.py  run.sh  tmp.md
evaluation/queue/src/: common.rs  lib.rs  main.rs
evaluation/queue/src/clobber-nvm/: .gitignore  README.md  atlas.sh  build.sh  build_and_run.sh  build_clobberpass.sh  build_llvm.sh  build_mnemosyne.sh  build_taslock.sh  clobberlogclang  deps.sh  pmdk.sh  rollclang  rollinlineclang  run_all.sh  sanitizer_platform_limits_posix.patch
evaluation/queue/src/clobber-nvm/apps/: README.md  buildandrun_memcached.sh  clean.sh  ext4.sh  logstats.sh  nvbench.sh  run_stamp.sh
evaluation/queue/src/clobber-nvm/mnemosyne-gcc/: README.md
evaluation/queue/src/clobber-nvm/passes/: Common.hpp  GlobalVal.cpp  MemoryIdempotenceAnalysis.cpp  MemoryIdempotenceAnalysis.h  NaiveHook.cpp
evaluation/queue/src/clobber-nvm/taslock/: Makefile  README.md  config.mk  pthread_cond.c  (+6 more)
evaluation/queue/src/compositional_pobj/: mod.rs  queue.rs  queue_comb.rs  queue_general.rs  queue_lp.rs  queue_pbcomb.rs
evaluation/queue/src/dss/: queue.rs
evaluation/queue/src/friedman/: durable_queue.rs  log_queue.rs
evaluation/queue/src/pbcomb/: mod.rs  pipe_mmt.rs  queue.rs  queue_mmt.rs
evaluation/queue/src/pmdk/: pipe.cpp  queue.cpp  queue.hpp
evaluation/src/: common.hpp  common.rs  lib.rs  main.cpp  main.rs
evaluation/src/compositional_pobj/: mod.rs  pipe.rs  pipe_queue.rs  queue.rs  queue_general.rs  queue_linkp.rs  queue_lp.rs  queue_opt.rs  queue_opt_linkp.rs  queue_pbcomb.rs  queue_unopt.rs
evaluation/src/crndm/: mod.rs  pipe.rs  queue.rs
evaluation/src/dss/: mod.rs  queue.rs
evaluation/src/friedman/: durable_queue.rs  log_queue.rs  mod.rs
evaluation/src/pbcomb/: mod.rs  queue.rs
evaluation/src/pmdk/: build.sh  pipe.cpp  pipe.hpp  queue.cpp  queue.hpp
ext/jaaru-llvm-pass/: CMakeLists.txt  PMCPass.cpp
(+387 files in other folders)
