[package]
name = "memento"
version = "0.1.0"
authors = [
    "Anonymous",
]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["use_clwb"]
no_persist = []
use_clflushopt = []
use_clwb = []
use_msync = []
stat_print_flushes = []
stress = []

[dependencies]
crossbeam-epoch = { path = "./crossbeam-persistency/crossbeam-epoch" }
crossbeam-utils = { path = "./crossbeam-persistency/crossbeam-utils" }
etrace = "1.1.1"
rand = "0.8.4"
tempfile = "3.2.0"
array-init = "2.0.0"
lazy_static = "1.4.0"
itertools = "0.10.3"
fasthash = "0.4.0"
cfg-if = "1.0.0"
tinyvec = { version = "1.5.1", features = ["alloc", "rustc_1_40"] }
libc = "0.2.109"

[dev-dependencies]
log = "0.4.14"
env_logger = "0.9.0"
rusty-fork = "0.3.0"

[profile.release]
debug = true
