[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
memento = { path = "../" }
crossbeam-epoch = { git = "https://cp-git.kaist.ac.kr/persistent-mem/crossbeam-memento/", package = "crossbeam-epoch", branch = "memento" }
crossbeam-utils = { git = "https://cp-git.kaist.ac.kr/persistent-mem/crossbeam-memento/", package = "crossbeam-utils", branch = "memento" }
rand = "0.8.4"
array-init = "2.0.0"
regex = "1.5.4"
structopt = "0.3"
csv = "1.1.6"
# corundum = "0.4.0" # 2021 edition에선 컴파일 안됨
corundum = { git = "https://github.com/NVSL/Corundum.git", rev = "17c9aa6" }  # 17c9aa6: 2022/01/07일자 main branch의 최신 commit
tinyvec = { version = "1.5.1", features = ["alloc", "rustc_1_40"] }
lazy_static = "1.4.0"

[features]
no_persist = ["memento/no_persist", "corundum/no_persist"]
