[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
memento = { path = "../../../" }
crossbeam-epoch = { path = "../../../crossbeam-persistency/crossbeam-epoch" }
crossbeam-utils = { path = "../../../crossbeam-persistency/crossbeam-utils" }
rand = "0.8.4"
array-init = "2.0.0"
regex = "1.5.4"
structopt = "0.3"
csv = "1.1.6"
corundum = { git = "https://github.com/NVSL/Corundum.git", rev = "20fc95d" }  # 20fc95d: latest commit at 2022/04/28
tinyvec = { version = "1.5.1", features = ["alloc", "rustc_1_40"] }
lazy_static = "1.4.0"

[features]
no_persist = ["memento/no_persist", "corundum/no_persist"]
