[package]
name = "clevel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# memento  = { git = "https://cp-git.kaist.ac.kr/persistent-mem/memento.git/" }

memento  = { path = "../../../../../" }
crossbeam-epoch = { git = "https://cp-git.kaist.ac.kr/persistent-mem/crossbeam-memento/", package = "crossbeam-epoch", branch = "memento" }
crossbeam-utils = { git = "https://cp-git.kaist.ac.kr/persistent-mem/crossbeam-memento/", package = "crossbeam-utils", branch = "memento" }
itertools = "0.10.3"
etrace = "1.1.1"
hashers = "1.0.1"
scopeguard = "1.1.0"
cfg-if = "1.0.0"
parking_lot = "0.11.2"
derivative = "2.2.0"
tinyvec = { version = "1.5.1", features = ["alloc", "rustc_1_40"] }
array-init = "2.0.0"

[lib]
name = "clevel_rust"
crate_type = ["staticlib"]

[features]
# default = ["stress"]
default = []
stress = []
no_persist = ["memento/no_persist"]
